# 11nocturn

./: .gitignore  11nocturn.maxhelp  CMakeLists.txt  README.md  nocturn.c  nocturn.sln  nocturn.vcxproj
11nocturn.xcodeproj/: project.pbxproj
11nocturn.xcodeproj/xcshareddata/xcschemes/: max-external.xcscheme
libusb-osx-master/lib/: libusb-1.0.dylib
